@@ -44,6 +44,7 @@ mongoc_collection_find_and_modify (mongoc_collection_t *collection,
     <title>Description</title>
     <p>Update and return an object.</p>
     <p>This is a thin wrapper around the <code>findAndModify</code> command. Either <code>update</code> or <code>_remove</code> arguments are required.</p>
+    <p>See also: <code xref="mongoc_collection_find_and_modify_with_opts">mongoc_collection_find_and_modify_with_opts</code>.</p>
     <note style="tip"><p>As of MongoDB 3.2 and mongoc 1.3.0, the <code xref="mongoc_write_concern_t">mongoc_write_concern_t</code> specified on the <code xref="mongoc_collection_t">mongoc_collection_t</code> will be used, if any.</p></note>
   </section>
 
