@@ -1,0 +1,42 @@
+<?xml version="1.0"?>
+<page xmlns="http://projectmallard.org/1.0/"
+      type="topic"
+      style="function"
+      xmlns:api="http://projectmallard.org/experimental/api/"
+      xmlns:ui="http://projectmallard.org/experimental/ui/"
+      id="mongoc_find_and_modify_opts_append">
+  <info><link type="guide" xref="mongoc_find_and_modify_opts_t" group="function"/></info>
+  <title>mongoc_find_and_modify_opts_append()</title>
+
+  <section id="synopsis">
+    <title>Synopsis</title>
+    <synopsis><code mime="text/x-csrc"><![CDATA[bool
+mongoc_find_and_modify_opts_append (mongoc_find_and_modify_opts_t *opts,
+                                    const bson_t                  *extra);
+]]></code></synopsis>
+  </section>
+
+  <section id="parameters">
+    <title>Parameters</title>
+    <table>
+      <tr><td><p>opts</p></td><td><p>A <code xref="mongoc_find_and_modify_opts_t">mongoc_find_and_modify_opts_t</code>.</p></td></tr>
+      <tr><td><p>extra</p></td><td><p>A <code xref="bson:bson_t">bson_t</code> with fields and values to append directly to the findAndModify command sent to the server.</p></td></tr>
+    </table>
+  </section>
+
+  <section id="description">
+    <title>Description</title>
+    <p>Adds arbitrary options to a <link href="https://docs.mongodb.org/manual/reference/command/findAndModify/">findAndModify</link> command.</p>
+  </section>
+
+  <section id="return">
+    <title>Returns</title>
+    <p>Returns true on success.</p>
+  </section>
+
+  <section id="example">
+    <title>Appending options to findAndModify</title>
+    <screen><code mime="text/x-csrc"><include parse="text" href="../examples/find_and_modify_with_opts/opts.c" xmlns="http://www.w3.org/2001/XInclude" /></code></screen>
+  </section>
+
+</page>
