@@ -1,0 +1,42 @@
+<?xml version="1.0"?>
+<page xmlns="http://projectmallard.org/1.0/"
+      type="topic"
+      style="function"
+      xmlns:api="http://projectmallard.org/experimental/api/"
+      xmlns:ui="http://projectmallard.org/experimental/ui/"
+      id="mongoc_find_and_modify_opts_set_max_time_ms">
+  <info><link type="guide" xref="mongoc_find_and_modify_opts_t" group="function"/></info>
+  <title>mongoc_find_and_modify_opts_set_max_time_ms()</title>
+
+  <section id="synopsis">
+    <title>Synopsis</title>
+    <synopsis><code mime="text/x-csrc"><![CDATA[bool
+mongoc_find_and_modify_opts_set_max_time_ms (mongoc_find_and_modify_opts_t *opts,
+                                             uint32_t                       max_time_ms);
+]]></code></synopsis>
+  </section>
+
+  <section id="parameters">
+    <title>Parameters</title>
+    <table>
+      <tr><td><p>opts</p></td><td><p>A <code xref="mongoc_find_and_modify_opts_t">mongoc_find_and_modify_opts_t</code>.</p></td></tr>
+      <tr><td><p>max_time_ms</p></td><td><p>The maximum server-side execution time permitted, in milliseconds, or 0 to specify no maximum time (the default setting).</p></td></tr>
+    </table>
+  </section>
+
+  <section id="description">
+    <title>Description</title>
+    <p>Adds a maxTimeMS argument to the builder.</p>
+  </section>
+
+  <section id="return">
+    <title>Returns</title>
+    <p>Returns true if it successfully added the option to the builder.</p>
+  </section>
+
+  <section id="example">
+    <title>Setting maxTimeMS</title>
+    <screen><code mime="text/x-csrc"><include parse="text" href="../examples/find_and_modify_with_opts/opts.c" xmlns="http://www.w3.org/2001/XInclude" /></code></screen>
+  </section>
+
+</page>
