@@ -165,8 +165,10 @@ mongoc_database_set_write_concern
 mongoc_find_and_modify_opts_destroy
 mongoc_find_and_modify_opts_new
 mongoc_find_and_modify_opts_set_bypass_document_validation
+mongoc_find_and_modify_opts_append
 mongoc_find_and_modify_opts_set_fields
 mongoc_find_and_modify_opts_set_flags
+mongoc_find_and_modify_opts_set_max_time_ms
 mongoc_find_and_modify_opts_set_sort
 mongoc_find_and_modify_opts_set_update
 mongoc_get_major_version
